# webconf-audit

./: .gitignore  README.md  pyproject.toml
demo/local_admin/: README.md  docker-compose.yml
demo/local_admin/iis/: machine.config  web.config
demo/local_admin/lighttpd/: lighttpd.conf
demo/local_admin/nginx/: nginx.conf
docs/: architecture.md
scripts/: install_iis_user_trial_lab.ps1  run_external_demo.ps1  run_local_admin_demo.ps1
src/webconf_audit/: finding_factory.py  models.py  rule_registry.py
src/webconf_audit/cli/: __init__.py  __main__.py
src/webconf_audit/local/: load_context.py  normalized.py  (+2 more)
tests/: __init__.py  test_cli.py  test_cross_cutting.py  test_deduplication.py  test_demo_local_admin.py  test_external.py  test_iis_discovery.py  test_iis_rule_utils.py  test_integration_report.py  test_lighttpd_conditions.py  test_load_context.py  test_local_apache.py  test_local_iis.py  test_local_lighttpd.py  test_local_nginx.py  test_local_rule_runners.py  test_nginx_parser.py  test_nginx_tokenizer.py  test_normalized.py  test_normalizer_apache.py  test_normalizer_iis.py  test_normalizer_lighttpd.py  test_normalizer_nginx.py  test_port_discovery.py  test_report.py  test_rule_registry.py  test_rule_registry_integrity.py  test_tls_listener_utils.py  test_tls_probe.py  test_universal_rules.py
tests/_fake_rule_pkg/: _private.py  alpha.py  beta.py
tests/integration_external/: README.md  conftest.py  docker-compose.yml  test_live_external.py
tests/integration_local/: test_live_local_admin_demo.py
tests/integration_rule_coverage/: README.md
(+179 files in other folders)
